--- a/index-2.html
+++ b/index-2.html
@@ -130,5 +130,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <h1 class="footer">Goal</h1>
+        <hr class="hr">
+    </footer>
 </body>
 </html>
