--- a/index-2.html
+++ b/index-2.html
@@ -133,6 +133,8 @@
     <footer>
         <h1 class="footer">Goal</h1>
         <hr class="hr">
+        <div><a class="google" target="_blank" href="www.google.com"><i class="fa-brands fa-google"></i></a></div>
+        <div><a class="google" target="_blank" href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
     </footer>
 </body>
 </html>
