--- a/upcoming/upcoming.html
+++ b/upcoming/upcoming.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>upcoming matches</title>
-    <link rel="stylesheet" href="styles/upcoming.css">
+    <title>upcoming Match</title>
+    <link rel="stylesheet" href="upcoming/upcoming.css">
     <link rel="shortcut icon" href="assets/football.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,9 @@
     <script src="https://kit.fontawesome.com/68c3447626.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!----------
+         header
+        --------- -->
     <main>
         <section class="container">
             <div class="main-banner">
@@ -26,6 +29,9 @@
                 </div>
             </div>
         </section>
+        <!-----------
+             sec-section
+                  ---------->
         <section class="sec-section">
             <div class="content">
                 <div class="gridsx">
@@ -93,6 +99,35 @@
                         <p class="time"><img src="assets/Time Icon.png" alt="">10h
                         <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
                     </div>
+                    <div class="blogsx">
+                        <div class="blog">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
+                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                    </div>
+                    <div class="blogsx">
+                        <div class="blog">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
+                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                    </div>
+                    <div class="blogsx">
+                        <div class="blog">
+                            <img src="assets/Blog Image.png" alt="">
+                        </div>
+                        <button>Transfer</button>
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
+                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
