--- a/index-2.html
+++ b/index-2.html
@@ -38,7 +38,7 @@
                     <div class="gridx">
                         <div class="grid">
                             <!-- <div class="left-grid">Upcoming Match</div> -->
-                            <a class="left-grid" href="">Upcoming Match</a>
+                            <a class="left-grid" href="upcoming/upcoming.html">Upcoming Match</a>
                             <div class="left-grid">All group</div>
                             <div class="left-grid " id="grid-3">Blog</div>
                         </div>
@@ -133,8 +133,8 @@
     <footer>
         <h1 class="footer">Goal</h1>
         <hr class="hr">
-        <div><a class="google" target="_blank" href="www.google.com"><i class="fa-brands fa-google"></i></a></div>
-        <div><a class="google" target="_blank" href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
+        <div><a class="google" target="_blank" href="https://www.google.com/"><i class="fa-brands fa-google"></i></a></div>
+        <div><a class="google" target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a></div>
     </footer>
 </body>
 </html>
