--- a/upcoming/upcoming.html
+++ b/upcoming/upcoming.html
@@ -47,84 +47,39 @@
                 <div class="blogs">
                     <div class="blogsx">
                         <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
-                            <button>Transfer</button>
-                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                            <p>Germany VS France </p>
                     </div>
                     <div class="blogsx">
                         <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
-                        <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                        <p>Germany VS France </p>
                     </div>
                     <div class="blogsx">
                         <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
-                         <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                        <p>Germany VS France </p>
                     </div>
                     <div class="blogsx">
                         <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
-                         <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                        <p>Germany VS France </p>
                     </div>
                     <div class="blogsx">
                         <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
-                        <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                        <p>Germany VS France </p>
                     </div>
                     <div class="blogsx">
                         <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
+                            <img src="assets/germany Flag.png" alt="">
                         </div>
-                        <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
-                    </div>
-                    <div class="blogsx">
-                        <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
-                    </div>
-                    <div class="blogsx">
-                        <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
-                    </div>
-                    <div class="blogsx">
-                        <div class="blog">
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <button>Transfer</button>
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p class="time"><img src="assets/Time Icon.png" alt="">10h
-                        <span class="chat"><img src="assets/Chat Icon.png" alt="">23</span></p>
+                        <p>Germany VS France </p>
                     </div>
                 </div>
             </div>
